<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved"
            android:title="@string/saved" />
        <item
            android:id="@+id/nav_bidding"
            android:icon="@drawable/ic_bidding"
            android:title="@string/bidding" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart" />
    </group>

    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
