<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.cod3vstudio.core.viewmodel.SignUpViewModel">

        </variable>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.cod3vstudio.bidreminder.activities.SignUpActivity">

        <include layout="@layout/toolbar"/>

        <RelativeLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/normal_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textColor="#ffffff"
                    android:textSize="35sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/app_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:text="@={viewModel.email}"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:text="@={viewModel.password}"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/txtRetypePassword"
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:hint="@string/retype_password"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:text="@={viewModel.retypePassword}"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_width="match_parent"
                    android:background="#ffffff"
                    android:hint="@string/name"
                    android:padding="10dp"
                    android:text="@={viewModel.name}"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:onClick="@{() -> viewModel.signUpCommand()}"
                    android:textSize="18sp"
                    android:background="@color/colorPrimaryDark"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_margin="10dp"
                    android:onClick="@{() -> viewModel.showSignInCommand()}"
                    android:textColor="#ffffff"
                    android:text="@string/sign_in"/>
            </LinearLayout>


        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>


