<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.cod3vstudio.core.viewmodel.BidViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.cod3vstudio.bidreminder.activities.BidActivity">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_activity_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:text="@{viewModel.product.name}"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/item_margin_top"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"
                    android:layout_marginTop="@dimen/edit_profile_item_margin_top"
                    android:textSize="14sp"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextPrice"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.product.price) + viewModel.product.currencyUnit}"
                    android:layout_marginTop="@dimen/edit_profile_item_margin_top"
                    android:textSize="14sp"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/item_margin_top"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.bidPrice}"
                    android:inputType="numberSigned|numberDecimal"
                    android:textSize="14sp"
                    android:hint="@string/bid_price"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/item_margin_top"
                android:layout_height="wrap_content"
                android:text="@string/settings_bid">
            </CheckBox>

        </LinearLayout>



    </LinearLayout>

</layout>


