<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.cod3vstudio.core.viewmodel.ProfileViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        tools:context="com.cod3vstudio.bidreminder.activities.ProfileActivity"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:background="@color/colorBackground"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/toolbar"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:padding="@dimen/normal_padding"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:layout_gravity="right|top"
                        android:onClick="@{() -> viewModel.pickImageCommand()}"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit"/>

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_blank_avatar"
                        android:id="@+id/img_avatar"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/normal_vertical_margin"
                    android:padding="@dimen/normal_padding"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/normal_padding"
                            android:paddingBottom="@dimen/normal_padding"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/name"/>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="Hà Quang Huy"
                                android:id="@+id/txtName" />

                        </LinearLayout>

                        <include layout="@layout/divider"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/normal_padding"
                            android:paddingBottom="@dimen/normal_padding"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/email"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="quanghuycod3v@gmail.com"
                                android:id="@+id/txtEmail" />

                        </LinearLayout>

                        <include layout="@layout/divider"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/normal_padding"
                            android:paddingBottom="@dimen/normal_padding"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/phone"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="+84937092814"
                                android:id="@+id/txtPhone" />

                        </LinearLayout>

                        <include layout="@layout/divider"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/normal_padding"
                            android:paddingBottom="@dimen/normal_padding"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/address"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="K47, Nguyễn Lương Bằng, Hòa Khánh Bắc, Liên Chiểu, Đà Nẵng"
                                android:id="@+id/txtAddress" />

                        </LinearLayout>

                        <include layout="@layout/divider"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/normal_padding"
                            android:paddingBottom="@dimen/normal_padding"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/nation"/>
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="Vietnam"
                                android:id="@+id/txtNation" />

                        </LinearLayout>


                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:layout_gravity="right|top"
                        android:onClick="@{() -> viewModel.showEditProfileCommand()}"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/normal_vertical_margin"
                    android:padding="@dimen/normal_padding"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/password"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:text="******"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:layout_gravity="right|top"
                        android:onClick="@{() -> viewModel.showEditPasswordCommand()}"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>

